--- a/vignettes/dp-covariance.Rmd
+++ b/vignettes/dp-covariance.Rmd
@@ -25,13 +25,13 @@ Differentially Private Covariance with `dpCovariance`
 The `dpCovariance` class evaluates a privacy-preserving covariance of a pair of vectors of values. The class supports any vector type that can be represented numerically, meaning that it can handle the R types `numeric` and `integer`.
 
 <!--
-Differential privacy is a rigorous mathematical framework for making statistical information about private datasets available. This is done in such a way that guarantees that information about specific individuals in the dataset does not leak out. Differentially private estimates of various statistics are available in this package.  For example, the `mean.release()` function releases a mean of a variable, while adding a precise about of noise to guarantee `epsilon` differential privacy. 
+Differential privacy is a rigorous mathematical framework for making statistical information about private datasets available. This is done in such a way that guarantees that information about specific individuals in the dataset does not leak out. Differentially private estimates of various statistics are available in this package.  For example, the `mean.release()` function releases a mean of a variable, while adding a precise about of noise to guarantee `epsilon` differential privacy.
 
 The privacy loss parameter `epsilon` is chosen by the user and represents the degree of privacy preservation guaranteed to each observation in the data when releasing information. Typically this is valued between 0 and 1; as the value gets smaller, the level of privacy protection grows. However, greater privacy protection means more noise must be added to the true mean to achieve the desired amount of privacy. Therefore, as epsilon grows smaller, the privacy protection becomes greater, but the accuracy of the statistical release becomes weaker.
 
 There is an additional definition of differential privacy known as `epsilon-delta` differential privacy. The additional privacy loss parameter `delta` is chosen by the user and represents how likely the privacy loss for a given dataset is more than epsilon. In other words, `delta` is the chance that additional privacy loss beyond `epsilon` occurs. This value should be very small, on the order of `10^-5`, and never greater than `1/n` (where n is the size of the database). Similar to `epsilon`, as the value of `delta` grows smaller, the level of privacy increases, but the accuracy decreases.
 
-It is noteworthy the user must manually specify the number of observations, variable type, and range of the data of interest; data will only be touched at the point the estimate to be released is actually computed, and only by the function computing that estimate. This structure decreases the possibility of an unauthorized release of information. Additional parameter specification includes the desired `epsilon` value and post-processing steps the user would like to perform on the released statistic. 
+It is noteworthy the user must manually specify the number of observations, variable type, and range of the data of interest; data will only be touched at the point the estimate to be released is actually computed, and only by the function computing that estimate. This structure decreases the possibility of an unauthorized release of information. Additional parameter specification includes the desired `epsilon` value and post-processing steps the user would like to perform on the released statistic.
 -->
 
 Syntax
@@ -45,7 +45,7 @@ range2 <- c(0,1)
 data <- data.frame(x1, x2)
 ranges <- do.call(rbind, list(range1, range2))
 
-example_dpCovariance <- dpCovariance$new(mechanism='mechanismLaplace', var.type='numeric', 
+example_dpCovariance <- dpCovariance$new(mechanism='mechanismLaplace', var.type='numeric',
                                          n=10, epsilon=10, columns = c('x1', 'x2'), rng=ranges)
 out1 <- example_dpCovariance$release(data)
 print(out1)
@@ -76,16 +76,16 @@ In typical usage, there are two methods to the `dpCovariance` class. The `new` m
 
 * `delta` \ Numeric, the differential privacy parameter $\delta$, the likelihood of additional privacy loss beyond $\epsilon$. Typically takes values of $10^{-5}$ or less, should never be less than $1/n$
 
-&nbsp; 
+&nbsp;
 
-The `release` method accepts a single argument. 
+The `release` method accepts a single argument.
 
 * `data` \ Data frame containing numeric columns corresponding the names specified in `columns`.
 
 Examples
 ------
 
-Attach the sample dataset. 
+Attach the sample dataset.
 
 ```{r, eval = TRUE}
 library(PSIlence)
@@ -102,7 +102,7 @@ income_range = c(0, 750000)
 education_range = c(1,16)
 column_ranges_matrix <- matrix(c(income_range, education_range), nrow=2, ncol=2, byrow=TRUE)
 
-numeric_covariance <- dpCovariance$new(mechanism='mechanismLaplace', var.type='numeric', 
+numeric_covariance <- dpCovariance$new(mechanism='mechanismLaplace', varType='numeric',
                            columns=c('income', 'educ'), n=10000, epsilon=0.1, rng=column_ranges_matrix)
 numeric_covariance$release(PUMS5extract10000)
 print(numeric_covariance$result)
@@ -115,7 +115,7 @@ The `release` method makes a call to the mechanism, which generates a list of st
 
 * `result` List, contains the covariance matrix and the list of the variables in the covariance matrix. Other elements reflecting variable post-processing of the release.
 
-&nbsp; 
+&nbsp;
 
 The list in the `result` attribute has the following values.
 
