--- a/vignettes/dp-variance.Rmd
+++ b/vignettes/dp-variance.Rmd
@@ -25,13 +25,13 @@ Differentially Private Variance with `dpVariance`
 The `dpVariance` class evaluates a privacy-preserving variance of a vector of values. The class supports any vector type that can be represented numerically, meaning that it can handle the R types `numeric`, `integer`, and `logical`.
 
 <!--
-Differential privacy is a rigorous mathematical framework for making statistical information about private datasets available. This is done in such a way that guarantees that information about specific individuals in the dataset does not leak out. Differentially private estimates of various statistics are available in this package.  For example, the `mean.release()` function releases a mean of a variable, while adding a precise about of noise to guarantee `epsilon` differential privacy. 
+Differential privacy is a rigorous mathematical framework for making statistical information about private datasets available. This is done in such a way that guarantees that information about specific individuals in the dataset does not leak out. Differentially private estimates of various statistics are available in this package.  For example, the `mean.release()` function releases a mean of a variable, while adding a precise about of noise to guarantee `epsilon` differential privacy.
 
 The privacy loss parameter `epsilon` is chosen by the user and represents the degree of privacy preservation guaranteed to each observation in the data when releasing information. Typically this is valued between 0 and 1; as the value gets smaller, the level of privacy protection grows. However, greater privacy protection means more noise must be added to the true mean to achieve the desired amount of privacy. Therefore, as epsilon grows smaller, the privacy protection becomes greater, but the accuracy of the statistical release becomes weaker.
 
 There is an additional definition of differential privacy known as `epsilon-delta` differential privacy. The additional privacy loss parameter `delta` is chosen by the user and represents how likely the privacy loss for a given dataset is more than epsilon. In other words, `delta` is the chance that additional privacy loss beyond `epsilon` occurs. This value should be very small, on the order of `2^-30`, and never greater than `1/n^2` (where n is the size of the database). Similar to `epsilon`, as the value of `delta` grows smaller, the level of privacy increases, but the accuracy decreases.
 
-The user must manually specify the number of observations, variable type, and range of the data of interest. 
+The user must manually specify the number of observations, variable type, and range of the data of interest.
 -->
 
 Syntax
@@ -42,12 +42,12 @@ x1 <- c(3, 12, 20, 42, 33, 65, 70, 54, 33, 45)
 x2 <- c(TRUE, FALSE, FALSE, TRUE, FALSE, TRUE, TRUE, TRUE, FALSE, TRUE)
 data <- data.frame(x1, x2)
 
-example_dpVariance <- dpVariance$new(mechanism='mechanismLaplace', var.type='numeric', 
+example_dpVariance <- dpVariance$new(mechanism='mechanismLaplace', varType='numeric',
                       variable='x1', epsilon=10, n=10, rng=c(0, 70))
 out1 <- example_dpVariance$release(data)
 print(out1)
 
-example_dpVariance2 <- dpMean$new(mechanism='mechanismLaplace', var.type='logical', 
+example_dpVariance2 <- dpMean$new(mechanism='mechanismLaplace', varType='logical',
                        variable='x2', epsilon=0.1, n=10, rng=c(0, 1))
 out2 <- example_dpVariance2$release(data)
 print(out2)
@@ -55,7 +55,7 @@ print(out2)
 
 
 dpVariance$methods(
-    initialize = function(mechanism, var.type, variable, n, rng, epsilon,
+    initialize = function(mechanism, varType, variable, n, rng, epsilon,
                           impute.rng=NULL, alpha=0.05)
 
 
@@ -67,7 +67,7 @@ In typical usage, there are two methods to the `dpVariance` class. The `new` met
 
 * `mechanism` \ Character, the class name of the mechanism used to perturb the true estimate, must be `'mechanismLaplace'`.
 
-* `var.type` \ Character, the type of values in the data frame that will be passed to the mechanism. Should be one of `'numeric'`, `'integer'`, or `'logical'`.
+* `varType` \ Character, the type of values in the data frame that will be passed to the mechanism. Should be one of `'numeric'`, `'integer'`, or `'logical'`.
 
 * `variable` \ character, the name of the variable in the data on which to calculate the variance.
 
@@ -81,16 +81,16 @@ In typical usage, there are two methods to the `dpVariance` class. The `new` met
 
 * `alpha` \ Numeric, the statistical significance level used in evaluating accuracy and privacy parameters. If the bootstrap is employed, `alpha` is also used to trim the release. Default `0.05`.
 
-&nbsp; 
+&nbsp;
 
-The `release` method accepts a single argument. 
+The `release` method accepts a single argument.
 
 * `data` \ Data frame containing numeric columns corresponding the name specified in `variable`.
 
 Examples
 ------
 
-Attach the sample dataset. 
+Attach the sample dataset.
 
 ```{r, eval = TRUE}
 library(PSIlence)
@@ -102,7 +102,7 @@ data(PUMS5extract10000)
 Calculate a private variance of a numeric vector with `dpVariance` using the Laplace mechanism:
 
 ```{r}
-numeric_variance <- dpVariance$new(mechanism='mechanismLaplace', var.type='numeric', 
+numeric_variance <- dpVariance$new(mechanism='mechanismLaplace', varType='numeric',
                            variable='income', n=10000, epsilon=0.1, rng=c(0, 750000))
 numeric_variance$release(PUMS5extract10000)
 print(numeric_variance$result)
@@ -110,10 +110,10 @@ print(numeric_variance$result)
 
 &nbsp;
 
-To calculate the variance of a logical vector instead, input a logical vector into `variable` and update `var.type` and `rng` appropriately:
+To calculate the variance of a logical vector instead, input a logical vector into `variable` and update `varType` and `rng` appropriately:
 
 ```{r}
-logical_variance <- dpVariance$new(mechanism='mechanismLaplace', var.type='logical', 
+logical_variance <- dpVariance$new(mechanism='mechanismLaplace', varType='logical',
                            variable='married', n=10000, epsilon=0.1, rng=c(0, 1))
 logical_variance$release(PUMS5extract10000)
 print(logical_variance$result)
@@ -126,7 +126,7 @@ The `release` method makes a call to the mechanism, which generates a list of st
 
 * `result` List, contains the accuracy guarantee, privacy cost, and private release. Other elements reflecting variable post-processing of the release.
 
-&nbsp; 
+&nbsp;
 
 The list in the `result` attribute has the following values.
 
